Changes with APR b1

  *) Fix a logic error in the poll code when implemented using select.
     [Nick Caruso <ncaruso@gamesville.com>]

  *) FreeBSD does not support sendfile() in combination with threads
     before version 4.2.  We no longer even try to support it.
     [Ryan Bloom]

  *) On FreeBSD, it is possible for the first call to sendfile to
     get EAGAIN, but still send some data.  This means that we cannot
     call sendfile and then check for EAGAIN, and then wait and call
     sendfile again.  If we do that, then we are likely to send the
     first chunk of data twice, once in the first call and once in the
     second.  If we are using a timed write, then we check to make sure
     we can send data before trying to send it. [Ryan Bloom]

  *) Cleanup to help Apache support programs build cleanly.
     [Cliff Woolley <cliffwoolley@yahoo.com>]

  *) Cleanup some compiler warnings on Solaris
     [Dale Ghent <daleg@elemental.org>]

  *) apr_getaddrinfo() can now return multiple addresses for a host
     via the next field in apr_sockaddr_t.  [Jeff Trawick]

  *) Tighten up the check for getaddrinfo().  If it can't figure out
     the appropriate address family for 127.0.0.1, it fails.  
     Unfortunately, Tru64 fails this test so we won't do IPv6 on
     Tru64.  [Jeff Trawick]

  *) Rename apr_opendir to apr_dir_open.  [Ryan Bloom]

  *) apr_snprintf()'s %pI format string now takes apr_sockaddr_t *
     instead of sockaddr_in *.  [Jeff Trawick]

  *) Fix a bug in apr_accept() for Win32 and Unix where the local 
     apr_sockaddr_t in the new connected socket was not initialized
     properly.  This could result in a bad string for apr_get_ipaddr(),
     among other things.  [Jeff Trawick]

  *) Add apr_getnameinfo(), a replacement for apr_get_hostname() which
     supports IPv6 and will be friendlier for use with eventual 
     SOCK_DGRAM support.  apr_get_hostname() is gone.  [Jeff Trawick]

Changes with APR a9
